Семантическая разметка index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,331 @@
 </head>
 
 <body>
+  <header class="header">
+    <section class="header-contacts">
+      <h2 class="visually-hidden">Адрес и телефон</h2>
+      <p class="contacts-text">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+      <address class="contacts-address">
+        <p class="contacts-address-text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="contacts-address-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+      </address>
+    </section>
+    <div class="header-logo-search-login">
+      <a class="logo-link" href="#">
+        <img class="logo" src="" alt="Логотип Техномарт.">
+      </a>
+      <form class="search" action="https://echo.htmlacademy.ru" method="get">
+        <label for="header-search">
+          <span class="visually-hidden">Поиск по сайту</span>
+        </label>
+        <input type="search" placeholder="Поиск:" name="header-search" id="header-search" required>
+      </form>
+      <button class="login" type="button">Вход</button>
+    </div>
+    <nav class="header-navigation">
+      <ul class="navigation-list-site">
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Компания</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Каталог</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Новости</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Спецпредложения</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Доставка</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-site" href="#">Контакты</a>
+        </li>
+      </ul>
+      <ul class="navigation-list-order">
+        <li class="navigation-item">
+          <a class="navigation-link-order" href="#">
+            <span class="visually-hidden">Закладки</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-order" href="#">
+            <span class="visually-hidden">Корзина</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link-order" href="#">Оформить заказ</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main">
+    <h1 class="visually-hidden">Интернет-магазин "Техномарт"</h1>
+    <section class="catalog">
+      <h2 class="visually-hidden">Каталог сайта</h2>
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <h3 class="catalog-title">Материалы</h3>
+          <a class="catalog-link" href="#"></a>
+        </li>
+        <li class="catalog-item">
+          <h3 class="catalog-title">Инструмент</h3>
+          <a class="catalog-link" href="#"></a>
+        </li>
+        <li class="catalog-item">
+          <h3 class="catalog-title">Техника</h3>
+          <a class="catalog-link" href="#"></a>
+        </li>
+        <li class="catalog-item">
+          <h3 class="catalog-title visually-hidden">Слайдер</h3>
+          <a class="catalog-link" href="#"></a>
+        </li>
+        <li class="catalog-item">
+          <h3 class="catalog-title">Скидки 50%</h3>
+          <a class="catalog-link" href="#"></a>
+        </li>
+        <li class="catalog-item">
+          <h3 class="catalog-title">Доставка</h3>
+          <a class="catalog-link" href="#"></a>
+        </li>
+      </ul>
+    </section>
+    <section class="perforators">
+      <h2>Перфораторы</h2>
+      <form class="manufacturer-forme" action="https://echo.htmlacademy.ru" method="get">
+        <fieldset class="manufacturer-fildset">
+          <legend class="manufacturer-legend">Цена</legend>
+          <div class="range-scale">
+            <div class="range-bar">
+              <button class="range-toggle toggle-min" type="button">
+                <span class="visually-hidden">Изменить минимальную цену</span>
+              </button>
+              <button class="range-toggle toggle-max" type="button">
+                <span class="visually-hidden">Изменить максимальную цену</span>
+              </button>
+            </div>
+          </div>
+          <div class="range-input">
+            <label class="visually-hidden" for="min">Цена минимальная</label>
+            <input type="number" id="min" name="price-min" value="0">
+            <label class="visually-hidden" for="max">Цена максимальная</label>
+            <input type="number" id="max" name="price-max" value="30000">
+          </div>
+        </fieldset>
+        <fieldset class="manufacturer-fildset">
+          <legend class="manufacturer-legend">Производители</legend>
+          <ul class="manufacturer-list">
+            <li class="manufacturer-item">
+              <label class="manufacturer-checkbox">
+                <input class="manufacturer-input visually-hidden" type="checkbox" name="bosch" checked>
+                <span class="manufacturer-mark"></span>
+                BOSCH
+              </label>
+            </li>
+            <li class="manufacturer-item">
+              <label class="manufacturer-checkbox">
+                <input class="manufacturer-input visually-hidden" type="checkbox" name="interskol">
+                <span class="manufacturer-mark"></span>
+                ИНТЕРСКОЛ
+              </label>
+            </li>
+            <li class="manufacturer-item">
+              <label class="manufacturer-checkbox">
+                <input class="manufacturer-input visually-hidden" type="checkbox" name="makita" checked>
+                <span class="manufacturer-mark"></span>
+                MAKita
+              </label>
+            </li>
+            <li class="manufacturer-item">
+              <label class="manufacturer-checkbox">
+                <input class="manufacturer-input visually-hidden" type="checkbox" name="dewalt">
+                <span class="manufacturer-mark"></span>
+                Dewalt
+              </label>
+            </li>
+            <li class="manufacturer-item">
+              <label class="manufacturer-checkbox">
+                <input class="manufacturer-input visually-hidden" type="checkbox" name="hitachi">
+                <span class="manufacturer-mark"></span>
+                Hitachi
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="power-fildset">
+          <legend class="power-legend">Питание</legend>
+          <ul class="power-list">
+            <li class="power-item">
+              <label class="power-radio">
+                <input class="radio-input visually-hidden" type="radio" name="power-radio" value="battery" checked>
+                <span class="power-mark"></span>
+                Аккумуляторные
+              </label>
+            </li>
+            <li class="power-item">
+              <label class="power-radio">
+                <input class="radio-input visually-hidden" type="radio" name="power-radio" value="network">
+                <span class="power-mark"></span>
+                Сетевые
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="button-fildset">
+          <button class="form-button" type="submit">Показать</button>
+        </fieldset>
+      </form>
+      <section class="sorting">
+        <h3 class="visually-hidden">Сортировка</h3>
+        <select class="sorting-option" name="sorting">
+          <option value="inexpensive">Сначала дешёвые</option>
+          <option value="popular">Популярные</option>
+          <option value="expensive">Дорогие</option>
+        </select>
+      </section>
+      <ul class="perforators-list">
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 3000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 6000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 2000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 3000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 6000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 2000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 3000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 6000</h3>
+        </li>
+        <li class="perforators-item">
+          <h3 class="perforators-title">Перфоратор BOSCH BFG 2000</h3>
+        </li>
+      </ul>
+      <div class="perforators-pagination">
+        <ul class="pagination-list">
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+        </ul>
+        <button class="pagination-button" type="button">Показать ещё</button>
+      </div>
+    </section>
+    <section class="services">
+      <h2>Сервисы</h2>
+      <p class="services-text">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех
+        сил, чтобы сделать ваши покупки приятными.</p>
+      <ul class="services-list">
+        <li class="services-item">
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
+            заработаем,
+            поднимая его на ваш этаж!</p>
+        </li>
+        <li class="services-item">
+          <h3>Гарантия</h3>
+          <p>Вы в течение года можете написать нам письмо с просьбой вернуть сумму оплаты, и мы полностью возместим вам
+            стоимось товара</p>
+        </li>
+        <li class="services-item">
+          <h3>Кредит</h3>
+          <p>Вы можете оформить кредит прямо на сайте! Для этого нужно выбрать понравившийся товар и заполнить поля и
+            ждать результата одобрения кредита.
+            Все как в банке, только проще!</p>
+        </li>
+      </ul>
+    </section>
+    <section class="about-company">
+      <h2 class="visually-hidden">О компании</h2>
+      <div class="company-info">
+        <h3>Компания "Техномарт"</h3>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
+          равнодушными любителей сэкономить на гастарбайтерах.Мы можем доставить ваш товар в самые отдаленные точки
+          России! Техномарт работает со многими транспортными компаниями:</p>
+        <a class="about-company-link" href="#">О компании</a>
+      </div>
+      <div class="contacts">
+        <h3>Контакты</h3>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+      </div>
+
+    </section>
+  </main>
+
+  <footer class="footer">
+    <section class="footer-contacts">
+      <h2 class="visually-hidden">Контакты</h2>
+      <a class="logo-link" href="#">
+        <img class="logo" src="" alt="Логотип Техномарт.">
+      </a>
+      <address class="contacts-address">
+        <p class="contacts-address-text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="contacts-address-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+      </address>
+      <ul class="footer-social-list">
+        <li class="social-item">
+          <a class="social-link" href="#">
+            <span class="visually-hidden">Pinterest</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="#">
+            <span class="visually-hidden">VKontakte</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="#">
+            <span class="visually-hidden">VSCO</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <div class="footer-subscription">
+      <address class="subscription-mail">
+        Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </address>
+      <p class="subscription-text">Получайте лучшие предложения</p>
+      <form class="subscription-form" action="https://echo.htmlacademy.ru" method="get">
+        <label class="visually-hidden" for="email">email</label>
+        <input class="subscription-form-email" type="email" name="subscription-email" id="email"
+          placeholder="email@example.com" required>
+        <button class="subscription-form-button" type="submit">
+          <span class="visually-hidden">Подписка</span>
+        </button>
+      </form>
+    </div>
+    <div class="copyright">
+      <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
+      <p>Разработано -
+        <a class="copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      </p>
+    </div>
+  </footer>
 
 </body>
 
