--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <h1 class="visually-hidden">Интернет-магазин "Техномарт"</h1>
   <header class="header">
     <section class="header-contacts">
       <h2 class="visually-hidden">Адрес и телефон</h2>
@@ -30,6 +31,7 @@
       <button class="login" type="button">Вход</button>
     </div>
     <nav class="header-navigation">
+      <h2 class="visually-hidden">Навигация сайта</h2>
       <ul class="navigation-list-site">
         <li class="navigation-item">
           <a class="navigation-link-site" href="#">Главная</a>
@@ -72,7 +74,6 @@
   </header>
 
   <main class="main">
-    <h1 class="visually-hidden">Интернет-магазин "Техномарт"</h1>
     <section class="catalog">
       <h2 class="visually-hidden">Каталог сайта</h2>
       <ul class="catalog-list">
