--- a/index.html
+++ b/index.html
@@ -22,52 +22,52 @@
       <a class="logo-link" href="#">
         <img class="logo" src="" alt="Логотип Техномарт.">
       </a>
-      <form class="search" action="https://echo.htmlacademy.ru" method="get">
+      <form class="header-search-form" action="https://echo.htmlacademy.ru" method="get">
         <label for="header-search">
           <span class="visually-hidden">Поиск по сайту</span>
         </label>
-        <input type="search" placeholder="Поиск:" name="header-search" id="header-search" required>
+        <input class="header-search-input" type="search" placeholder="Поиск:" name="header-search" id="header-search" required>
       </form>
-      <button class="login" type="button">Вход</button>
+      <button class="login-button" type="button">Вход</button>
     </div>
     <nav class="header-navigation">
       <h2 class="visually-hidden">Навигация сайта</h2>
       <ul class="navigation-list-site">
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Главная</a>
+          <a class="navigation-site-link" href="#">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Компания</a>
+          <a class="navigation-site-link" href="#">Компания</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Каталог</a>
+          <a class="navigation-site-link" href="#">Каталог</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Новости</a>
+          <a class="navigation-site-link" href="#">Новости</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Спецпредложения</a>
+          <a class="navigation-site-link" href="#">Спецпредложения</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Доставка</a>
+          <a class="navigation-site-link" href="#">Доставка</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-site" href="#">Контакты</a>
+          <a class="navigation-site-link" href="#">Контакты</a>
         </li>
       </ul>
       <ul class="navigation-list-order">
         <li class="navigation-item">
-          <a class="navigation-link-order" href="#">
+          <a class="navigation-order-link" href="#">
             <span class="visually-hidden">Закладки</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-order" href="#">
+          <a class="navigation-order-link" href="#">
             <span class="visually-hidden">Корзина</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link-order" href="#">Оформить заказ</a>
+          <a class="navigation-order-link" href="#">Оформить заказ</a>
         </li>
       </ul>
     </nav>
