Добавляет контекстные изображения

--- a/index.html
+++ b/index.html
@@ -89,16 +89,25 @@
           <a class="catalog-link" href="#"></a>
         </li>
         <li class="catalog-item">
-          <h3 class="catalog-title visuallyhidden">Слайдер</h3>
-          <a class="catalog-link" href="#"></a>
-        </li>
-        <li class="catalog-item">
           <h3 class="catalog-title">Скидки 50%</h3>
           <a class="catalog-link" href="#"></a>
         </li>
         <li class="catalog-item">
           <h3 class="catalog-title">Доставка</h3>
           <a class="catalog-link" href="#"></a>
+        </li>
+        <li class="catalog-item">
+          <h3 class="catalog-title visuallyhidden">Слайдер</h3>
+          <ul class="slider-list">
+            <li class="slider-item">
+              <img class="slider-product-img" src="images/drills.jpg" width="770" height="390" alt="Дрели">
+              <h4 class="slider-title">Дрели</h4>
+            </li>
+            <li class="slider-item">
+              <img class="slider-product-img" src="images/perforators.jpg" width="770" height="390" alt="Перфораторы">
+              <h4 class="slider-title">Перфораторы</h4>
+            </li>
+          </ul>
         </li>
       </ul>
     </section>
@@ -203,30 +212,56 @@
         <h3 class="visuallyhidden">Список перфораторов</h3>
         <ul class="register-list">
           <li class="register-item">
-            <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch3000-new.jpg" width="216" height="180" alt="bosch bfg 3000 new.">
+              <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
+            </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch6000-1.jpg" width="216" height="180" alt="bosch bfg 6000.">
             <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
+          </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch2000-new.jpg" width="216" height="180" alt="bosch bfg 2000 new.">
             <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
+          </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch3000.jpg" width="216" height="180" alt="bosch bfg 3000.">
             <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
+          </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch6000-1.jpg" width="216" height="180" alt="bosch bfg 6000 new.">
             <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
+            </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch2000.jpg" width="216" height="180" alt="bosch bfg 2000.">
             <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
+            </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch3000-new-2.jpg" width="216" height="180" alt="bosch bfg 3000 new.">
             <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
+            </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch6000-2.jpg" width="216" height="180" alt="bosch bfg 6000.">
             <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
+            </a>
           </li>
           <li class="register-item">
+            <a class="register-link" href="#">
+              <img class="register-img" src="images/bosch2000-new.jpg" width="216" height="180" alt="bosch bfg 2000 new.">
             <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
           </li>
         </ul>
