--- a/index.html
+++ b/index.html
@@ -10,66 +10,69 @@
 <body>
   <h1 class="visuallyhidden">Интернет-магазин "Техномарт"</h1>
   <header class="header">
-    <section class="header-contacts">
-      <h2 class="visuallyhidden">Адрес и телефон</h2>
-      <p class="header-contacts-text">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <address class="header-contacts-address">
-        <p class="header-contacts-address-text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <a class="header-contacts-address-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-      </address>
-    </section>
-    <div class="header-logo-search-login">
-      <a class="logo-link" href="#">
-        <img class="logo" src="images/logo-technomart.svg" width="108" height="18" alt="Логотип Техномарт.">
-      </a>
-      <form class="header-search-form" action="https://echo.htmlacademy.ru" method="get">
-        <label class="visuallyhidden" for="header-search">Поиск по сайту</label>
-        <input class="header-search-input" type="search" placeholder="Поиск:" name="header-search" id="header-search"
-          required>
-      </form>
-      <button class="header-login-button" type="button">Войти</button>
+    <div class="header-container">
+      <section class="header-contacts">
+        <h2 class="visuallyhidden">Адрес и телефон</h2>
+        <p class="header-contacts-text">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <address class="header-contacts-address">
+          <p class="header-contacts-address-text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <a class="header-contacts-address-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </address>
+      </section>
+      <section class="header-logo-search-login">
+        <h2 class="visuallyhidden">Логотип, поиск, логин.</h2>
+        <a class="logo-link" href="#">
+          <img class="logo" src="images/logo-technomart.svg" width="108" height="18" alt="Логотип Техномарт.">
+        </a>
+        <form class="header-search-form" action="https://echo.htmlacademy.ru" method="get">
+          <label class="visuallyhidden" for="header-search">Поиск по сайту</label>
+          <input class="header-search-input" type="search" placeholder="Поиск:" name="header-search" id="header-search"
+            required>
+        </form>
+        <button class="header-login-button" type="button">Войти</button>
+      </section>
+      <nav class="header-navigation">
+        <h2 class="visuallyhidden">Навигация сайта</h2>
+        <ul class="navigation-site-list">
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Компания</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Новости</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Спецпредложения</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-site-link" href="#">Контакты</a>
+          </li>
+        </ul>
+        <ul class="navigation-order-list">
+          <li class="navigation-item">
+            <a class="navigation-order-link" href="#">
+              <span class="visuallyhidden">Закладки</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-order-link" href="#">
+              <span class="visuallyhidden">Корзина</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-order-link" href="#">Оформить заказ</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="header-navigation">
-      <h2 class="visuallyhidden">Навигация сайта</h2>
-      <ul class="navigation-site-list">
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Компания</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Каталог</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Новости</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Спецпредложения</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Доставка</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-site-link" href="#">Контакты</a>
-        </li>
-      </ul>
-      <ul class="navigation-order-list">
-        <li class="navigation-item">
-          <a class="navigation-order-link" href="#">
-            <span class="visuallyhidden">Закладки</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-order-link" href="#">
-            <span class="visuallyhidden">Корзина</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-order-link" href="#">Оформить заказ</a>
-        </li>
-      </ul>
-    </nav>
   </header>
 
   <main class="main">
@@ -213,56 +216,61 @@
         <ul class="register-list">
           <li class="register-item">
             <a class="register-link" href="#">
-              <img class="register-img" src="images/bosch3000-new.jpg" width="216" height="180" alt="bosch bfg 3000 new.">
+              <img class="register-img" src="images/bosch3000-new.jpg" width="216" height="180"
+                alt="bosch bfg 3000 new.">
               <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
             </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
               <img class="register-img" src="images/bosch6000-1.jpg" width="216" height="180" alt="bosch bfg 6000.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
-          </a>
+              <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
+            </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
-              <img class="register-img" src="images/bosch2000-new.jpg" width="216" height="180" alt="bosch bfg 2000 new.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
-          </a>
+              <img class="register-img" src="images/bosch2000-new.jpg" width="216" height="180"
+                alt="bosch bfg 2000 new.">
+              <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
+            </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
               <img class="register-img" src="images/bosch3000.jpg" width="216" height="180" alt="bosch bfg 3000.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
-          </a>
+              <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
+            </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
               <img class="register-img" src="images/bosch6000-1.jpg" width="216" height="180" alt="bosch bfg 6000 new.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
+              <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
             </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
               <img class="register-img" src="images/bosch2000.jpg" width="216" height="180" alt="bosch bfg 2000.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
+              <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
             </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
-              <img class="register-img" src="images/bosch3000-new-2.jpg" width="216" height="180" alt="bosch bfg 3000 new.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
+              <img class="register-img" src="images/bosch3000-new-2.jpg" width="216" height="180"
+                alt="bosch bfg 3000 new.">
+              <h3 class="register-title">Перфоратор BOSCH BFG 3000</h3>
             </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
               <img class="register-img" src="images/bosch6000-2.jpg" width="216" height="180" alt="bosch bfg 6000.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
+              <h3 class="register-title">Перфоратор BOSCH BFG 6000</h3>
             </a>
           </li>
           <li class="register-item">
             <a class="register-link" href="#">
-              <img class="register-img" src="images/bosch2000-new.jpg" width="216" height="180" alt="bosch bfg 2000 new.">
-            <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
+              <img class="register-img" src="images/bosch2000-new.jpg" width="216" height="180"
+                alt="bosch bfg 2000 new.">
+              <h3 class="register-title">Перфоратор BOSCH BFG 2000</h3>
+            </a>
           </li>
         </ul>
         <ul class="pagination-list">
