--- a/index.html
+++ b/index.html
@@ -10,31 +10,47 @@
 <body>
   <h1 class="visuallyhidden">Интернет-магазин "Техномарт"</h1>
   <header class="header">
-    <div class="header-container">
-      <section class="header-contacts">
-        <h2 class="visuallyhidden">Адрес и телефон</h2>
-        <p class="header-contacts-text">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <address class="header-contacts-address">
-          <p class="header-contacts-address-text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <a class="header-contacts-address-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-        </address>
-      </section>
-      <section class="header-logo-search-login">
-        <h2 class="visuallyhidden">Логотип, поиск, логин.</h2>
-        <a class="logo-link" href="#">
-          <img class="logo" src="images/logo-technomart.svg" width="108" height="18" alt="Логотип Техномарт.">
-        </a>
-        <form class="header-search-form" action="https://echo.htmlacademy.ru" method="get">
-          <label class="visuallyhidden" for="header-search">Поиск по сайту</label>
-          <input class="header-search-input" type="search" placeholder="Поиск:" name="header-search" id="header-search"
-            required>
-        </form>
-        <button class="header-login-button" type="button">Войти</button>
-      </section>
-      <nav class="header-navigation">
-        <h2 class="visuallyhidden">Навигация сайта</h2>
-        <ul class="navigation-site-list">
-          <li class="navigation-item">
+    <div class="contacts-background">
+      <div class="header-container">
+        <section class="header-contacts">
+          <h2 class="visuallyhidden">Адрес и телефон</h2>
+          <p class="contacts-text">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+          <address class="contacts-address">
+            <p class="address-text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <a class="address-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+          </address>
+        </section>
+      </div>
+    </div>
+    <div class="logo-background">
+      <div class="header-container">
+        <section class="search-login">
+          <h2 class="visuallyhidden">Логотип, поиск, логин.</h2>
+          <a class="logo-link" href="#">
+            <img class="logo" src="images/logo-technomart.svg" width="108" height="18" alt="Логотип Техномарт.">
+          </a>
+          <form class="header-form" action="https://echo.htmlacademy.ru" method="get">
+            <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M8.48 16a8 8 0 1 1 6.31-3.1l5.38 5.4-1.41 1.4-5.38-5.38A7.95 7.95 0 0 1 8.48 16Zm6-8a6 6 0 1 1-12 0 6 6 0 0 1 12 0Z"
+                fill="#fff" />
+            </svg>
+            <label class="visuallyhidden label" for="header-search">Поиск по сайту</label>
+            <input class="header-input" type="search" placeholder="Поиск:" name="header-search" id="header-search"
+              required>
+          </form>
+          <div class="login-container">
+            <button class="login-button" type="button">Войти</button>
+          </div>
+        </section>
+      </div>
+    </div>
+    <div class="navigation-background">
+      <div class="header-container">
+        <nav class="navigation">
+          <h2 class="visuallyhidden">Навигация сайта</h2>
+          <ul class="navigation-site-list">
+            <li class="navigation-item">
             <a class="navigation-site-link" href="#">Главная</a>
           </li>
           <li class="navigation-item">
@@ -72,6 +88,7 @@
           </li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
 
