Добавляет пагинацию в слайдер

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </header>
 
   <main class="main">
-    <div class="section-background">
+    <div class="catalog-background">
       <div class="container">
         <section class="catalog">
           <h2 class="visuallyhidden">Каталог сайта</h2>
@@ -151,6 +151,17 @@
                 </button>
               </div>
               <a class="slider-link" href="catalog.html">Открыть каталог</a>
+              <div class="slider-pagination">
+                <button class="slider-pagination-button slider-pagination-current" type="button">
+                  <span class="visuallyhidden">slide-1</span>
+                </button>
+                <button class="slider-pagination-button" type="button">
+                  <span class="visuallyhidden">slide-2</span>
+                </button>
+                <button class="slider-pagination-button" type="button">
+                  <span class="visuallyhidden">slide-3</span>
+                </button>
+              </div>
             </li>
           </ul>
         </section>
