--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
   </header>
 
-  <main class="main">
+  <main class="main-container">
     <div class="catalog-background">
       <div class="container">
         <section class="catalog">
