--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
     <div class="copyright-background">
       <div class="container">
         <div class="copyright">
-          <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
-          <p>Разработано -
+          <p class="copyright-text">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+          <p class="copyright-creator">Разработано -
             <a class="copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
