--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Техномарт</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
